# repo-inspect

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LOCAL_CI.md  OPS.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: L2-L3-DESIGN.md
rules/: API-RULES.md  ARCHITECTURE.md  CODING.md  DATA-STATE.md  DEBUGGING.md  DEPENDENCIES.md  ERROR-HANDLING.md  LLM-REVIEW-GUIDE.md  LOCAL_CI.md  LOGGING.md  OPS.md  PERFORMANCE.md  REVIEW-RULES.md  SECURITY.md  TESTING.md  VERIFICATION.md
scripts/: ci.sh
skills/repo-inspect/: SKILL.md
skills/repo-inspect/references/: commands.md
skills/repo-inspect/scripts/: repo-inspect
src/: cli.rs  main.rs
src/commands/: data.rs  entries.rs  find_how.rs  hotspots.rs  mod.rs  overview.rs  patterns.rs  trace.rs
src/git/: mod.rs
src/graph/: builder.rs  mod.rs  pagerank.rs  traverse.rs
src/output/: mod.rs
src/remote/: mod.rs  search.rs
src/scan/: mod.rs  parser.rs  queries.rs  stack.rs
src/search/: mod.rs
