[package]
name = "repo-inspect"
version = "0.1.0"
edition = "2024"
description = "Surgical codebase inspection CLI — find how features are implemented, trace symbols, detect patterns. Built for AI agents to quickly understand open-source projects."
license = "MIT"
repository = "https://github.com/gjczone/repo-inspect"

[[bin]]
name = "repo-inspect"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
